--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="left-sidebar">
                 <div class="activities">
-                   <a href="#"><img src="assets/images/news.png" alt="news icon">Latest News</a>
+                   <a href="#"><img src="assets/images/news.png" alt="news icon">Latest</a>
                    <a href="#"><img src="assets/images/friends.png" alt="friends icon">Friends</a>
                    <a href="#"><img src="assets/images/group.png" alt="group icon">Group</a>
                    <a href="#"><img src="assets/images/marketplace.png" alt="marketplace icon">Marketplace</a>
