--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 <img src="assets/images/member-2.png" alt="upload">
                                 <p>Jack</p>
                             </div> <!-- story01 -->
-                            <div class="story" style="background-image: linear-gradient(transparent, rgba(0,0,0,0.5)),url(assets/images/status-2.png);">
+                            <div class="story" style="background-image: linear-gradient(transparent, rgba(0,0,0,0.5)),url(assets/images/pexels-italo-melo-2379004.jpg);">
                                 <img src="assets/images/upload.png">
                                 <img src="assets/images/member-8.png" alt="upload">
                                 <p>Maria</p>
